<resources>
    <string name="app_name">TripMemory</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_location">Type the location</string>
    <string name="hint_date">Pick the date</string>
    <string name="hint_story">Write down your memories...</string>
    <string name="hint_comfirmpassword">Confirm password</string>
    <string name="error_invalid_email">This email address is invalid!</string>
    <string name="error_invalid_password">This password is invalid!</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_isnotequal_password">The password is not the same!</string>
    <string name="error_fields">Check the fields!</string>
    <string name="no_internet_connection">Check the internet connection!</string>
    <string name="auth_failed">Registration failed</string>
    <string name="auth_succ">Successful registration</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_in_succ">Sign in successful</string>
    <string name="check_fields">Check the fields!</string>
    <string name="date_field">The date field is required!</string>
    <string name="location_field">The location field is required!</string>
    <string name="save_memory_succ">Your memories have been successfully saved!</string>
    <string name="read_failed">Reading memories failed!</string>
    <string name="send_email_succ">The email successfully sent</string>
    <string name="send_email_failed">Sending email failed!</string>

    <string name="title_activity_basic">BasicActivity</string>
</resources>
